--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,13 @@ django-select2==8.4.1
 django-widget-tweaks==1.5.0
 djangorestframework==3.16.1
 et_xmlfile==2.0.0
+numpy==2.3.3
 openpyxl==3.1.5
+pandas==2.3.2
 psycopg2-binary==2.9.10
+python-dateutil==2.9.0.post0
+pytz==2025.2
+six==1.17.0
 sqlparse==0.5.3
 tablib==3.8.0
-typing_extensions==4.15.0
+tzdata==2025.2
