--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,44 @@
-asgiref==3.9.1
-diff-match-patch==20241021
-Django==5.2.6
-django-appconf==1.1.0
-django-crontab==0.7.1
-django-import-export==4.3.9
-django-select2==8.4.1
+altgraph @ file:///AppleInternal/Library/BuildRoots/bcce998f-ff34-11ef-9d34-f2a857e00a32/Library/Caches/com.apple.xbs/Sources/python3/altgraph-0.17.2-py2.py3-none-any.whl
+anyio==4.9.0
+arrow==1.2.3
+asgiref==3.5.2
+binaryornot==0.4.4
+certifi==2022.9.24
+chardet==5.0.0
+charset-normalizer==2.1.1
+click==8.1.3
+cookiecutter==2.1.1
+distlib==0.3.8
+Django==4.1
+django-browser-reload==1.6.0
+django-tailwind==3.4.0
 django-widget-tweaks==1.5.0
-djangorestframework==3.16.1
-et_xmlfile==2.0.0
-numpy==2.3.3
-openpyxl==3.1.5
-pandas==2.3.2
-psycopg2-binary==2.9.10
-python-dateutil==2.9.0.post0
+exceptiongroup==1.3.0
+filelock==3.13.1
+future @ file:///AppleInternal/Library/BuildRoots/bcce998f-ff34-11ef-9d34-f2a857e00a32/Library/Caches/com.apple.xbs/Sources/python3/future-0.18.2-py3-none-any.whl
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.4
+Jinja2==3.1.2
+jinja2-time==0.2.0
+macholib @ file:///AppleInternal/Library/BuildRoots/bcce998f-ff34-11ef-9d34-f2a857e00a32/Library/Caches/com.apple.xbs/Sources/python3/macholib-1.15.2-py2.py3-none-any.whl
+MarkupSafe==2.1.1
+numpy==2.0.2
+openaq==0.4.0
+pandas==2.3.0
+Pillow==9.3.0
+platformdirs==4.2.0
+python-dateutil==2.8.2
+python-slugify==6.1.2
 pytz==2025.2
-six==1.17.0
-sqlparse==0.5.3
-tablib==3.8.0
+PyYAML==6.0
+requests==2.28.1
+six @ file:///AppleInternal/Library/BuildRoots/bcce998f-ff34-11ef-9d34-f2a857e00a32/Library/Caches/com.apple.xbs/Sources/python3/six-1.15.0-py2.py3-none-any.whl
+sniffio==1.3.1
+sqlparse==0.4.2
+text-unidecode==1.3
+typing_extensions==4.14.0
 tzdata==2025.2
+urllib3==1.26.12
+virtualenv==20.25.0
