--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,14 @@ __pycache__/
 venv/
 env/
 venv_new/
+
 # Django
 db.sqlite3
 *.log
+
+# Environment secrets — NEVER commit
+.env
+.env.*
 
 # VS Code
 .vscode/
